# azul-stats

./: .gitignore  Dockerfile  README.md  pipeline-mirror.yaml  pipeline.yaml  pyproject.toml  requirements.txt  setup.py  tox.ini
azul_stats/: auth_wrapper.py  azul_probe.py  azure_wrapper.py  kafka_wrapper.py  main.py  minio_wrapper.py  opensearch_wrapper.py  redis_wrapper.py  settings.py  utils.py
demo-cluster/: docker-compose.yml  readme.md
tests/integration/: base_test.py  test_all.py  test_auth_main.py  test_auth_wrapper.py  test_azul_prober.py  test_azul_prober_main.py  test_azure_main.py  test_azure_wrapper.py  test_kafka_main.py  test_kafka_wrapper.py  test_minio_main.py  test_minio_wrapper.py  test_opensearch_main.py  test_opensearch_wrapper.py  test_redis_main.py  test_redis_wrapper.py
tests/unit/: test_main.py  test_utils.py
